# yandex-test-task-cpp

./: .gitignore  CMakeLists.txt  README.md  check_mem_usage.cpp  check_mem_usage.py  goforbroke1006_sort.cpp  rand_num_base_generator.cpp  stepic-derivative.cpp  stepic-smart-ptr.cpp
gfb/: README.md  gfb_base_file_mng.h  gfb_file.h  gfb_measure.h  gfb_ram_control.h  main.cpp
